# team-eternity

./: EDA.ipynb  README.md  docker-compose.yaml  initial_data_json_schema.json
analitica_datos/archivos/: llamado_inicial.json
analitica_datos/notebooks/: Eda.ipynb
eternity/: package-lock.json  package.json
front/: Dockerfile  package-lock.json  package.json
front/components/: CountryInfo.tsx  PopupTable.tsx
front/pages/: index.tsx  maps.tsx
front/public/: data.json  llamado_inicial.json
server/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
server/app/: config.py  crud.py  main.py
server/datos/: script_to_datos.py
server/tests/: conftest.py  test_ping.py
